Elements animated on-screen are missing sometimes https://bugs.webkit.org/show_bug.cgi?id=180773 rdar://problem/34923438

Reviewed by Zalan Bujtas.

After r225310 it was still possible for elements to be missing backing store when brought
on-screen via an animation. This occurred if a child element was outside the bounds of the
element being animated.

Fix by making sure that GraphicsLayer's "animatedExtent" took composited child layers into account.

As for r225310, no test because this is timing sensitive and hard to reliably make a test for.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects const):
* rendering/RenderLayer.h:
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):


Canonical link: https://commits.webkit.org/196779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225983 268f45cc-cd09-0410-ab3c-d52691b4dbfc